@@ -486,6 +486,11 @@ if ( !class_exists( 'CoursePress' ) ) {
 				 */
 				add_action( 'wp_ajax_cp_activate_mp_lite', array( &$this, 'activate_marketpress_lite' ) );
 
+				/**
+				 * Hook Unit creation to add course meta.
+				 */
+				add_action( 'coursepress_unit_created', array( &$this, 'update_course_meta_on_unit_creation'), 10, 2 );
+				add_action( 'coursepress_unit_updated', array( &$this, 'update_course_meta_on_unit_creation'), 10, 2 );
 
 				/**
 				 * Hook WordPress Editor filters and actions.
@@ -1290,6 +1295,42 @@ if ( !class_exists( 'CoursePress' ) ) {
 			$xmlResponse = new WP_Ajax_Response( $response );
 			$xmlResponse->send();
 			ob_end_flush();
+		}
+
+		function update_course_meta_on_unit_creation( $post_id, $course_id ) {
+
+			if( ! $course_id ) {
+				$post      = get_post( $post_id );
+				$course_id = $post->post_parent;
+			}
+
+			// Update course structure
+			$structure_option = get_post_meta( $course_id, 'course_structure_options', true );
+			$structure_option = ! empty( $structure_option ) && 'on' == $structure_option ? 'on' : 'off';
+
+			$show_unit_boxes = get_post_meta( $course_id, 'show_unit_boxes', true );
+			$keys = array_keys( $show_unit_boxes );
+
+			// We only want to do this once to prevent accidental override.
+			if( ! in_array( $post_id, $keys ) ) {
+				$show_unit_boxes[ $post_id ] = $structure_option;
+			}
+
+			update_post_meta( $course_id, 'show_unit_boxes', $show_unit_boxes );
+
+			$show_page_boxes = get_post_meta( $course_id, 'show_page_boxes', true );
+			$keys = array_keys( $show_page_boxes );
+
+			$page_count = Unit::get_page_count( $post_id );
+			for( $i = 1; $i <= $page_count; $i++ ) {
+				$key = $post_id . '_' . $i;
+				// Avoid accidental overrides.
+				if( ! in_array( $key, $keys ) ) {
+					$show_page_boxes[ $key ] = $structure_option;
+				}
+			}
+			update_post_meta( $course_id, 'show_page_boxes', $show_page_boxes );
+
 		}
 
 		function course_checkout_success_msg( $setting, $default ) {
