@@ -34,6 +34,7 @@ CHANGE LOG
 * Fixed RTL issue causing horizontal scroll bug on Course Overview page.
 * Added basic certificate functionality (templates planned for future release).
 * Fixed 0's showing up on CoursePress pages when Poll Voting Plugin is installed.
+* Fixed new units automatically added to structure where it was not before.
 
 = 1.2.5 =
 * Added additional hooks and filters for developers
